fix: improve responsive design

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -16,3 +16,7 @@ body{
   font-size: 0.9rem;
   
 }
+
+.el-input.el-input--prefix.el-input--suffix.el-date-editor.el-date-editor--year.el-tooltip__trigger.el-tooltip__trigger{
+  width:100%!important
+}
